# To-do-list

./: LICENSE  Procfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: django_workflow.yml
webdev/: home_view.py  settings.py  urls.py
webdev/tarefas/: forms.py  models.py  urls.py  views.py
webdev/tarefas/migrations/: 0001_initial.py
webdev/tarefas/templates/tarefas/: home.html
webdev/tarefas/tests/: test_apagar_tarefa.py  test_edicao_de_tarefas.py  test_tarefas_get.py  test_tarefas_post.py
webdev/tests/: test_home.py
