[tool.poetry]
name = "to-do-list"
version = "0.1.0"
description = ""
authors = ["Vinicius Braga <Vbragadev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.9"
Django = "^4.0.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.5.2"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
